--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section class="cards-section">
+            <div class="card"></div>
+        </section>
+    </main>
 
+
+    <script src="script.js"></script>
 </body>
 </html>
